2008-12-24  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/signal.inl: (cyg_libc_signals_[un]lock): remove the
	static from these inline functions which are used by the none
	static inline signal() and raise().
 
2007-09-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/siginit.cxx (cyg_libc_signals_default_handler): Handle case where
	CYGINT_ISO_EXIT not available.

2003-06-26  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/signal.h: Remove unused definitions that had been used
	for embryonic POSIX signals support.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/signals.cdl: Fix doc link.

2003-02-13  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/signal.inl (raise): Use if/else rather than switch to
	avoid GCC 3.2 bug.

2002-05-23  Jesper Skov  <jskov@redhat.com>

	* cdl/signals.cdl: Don't build signal2 test when it'll N/A
	anyway.

2002-04-30  Jesper Skov  <jskov@redhat.com>

	* cdl/signals.cdl: Added
	CYGPKG_LIBC_SIGNALS_TESTS_SIGNAL2_TEST3_SKIP.
	Removed again.

	* tests/signal2.c: Instead check for
	CYGNUM_HAL_EXCEPTION_FPU_DIV_BY_ZERO to decide if test3 is
	appropriate.

2001-05-02  Nick Garnett  <nickg@cygnus.co.uk>

	[x86 branch]
	* tests/signal2.c (cause_memerror): Added code for I386
	architecture to provoke General Protection Fault.

2001-04-27  Bart Veer  <bartv@redhat.com>

	* tests/signal2.c (main):
	The FPE test is applicable to the updated synthetic target. 

2001-04-17  Bart Veer  <bartv@redhat.com>

	* cdl/signals.cdl:
	Synthetic target now supports exceptions

2000-09-14  Jesper Skov  <jskov@redhat.com>

	* tests/signal/signal2.c: Prevent that GCC optimizes away the
	cause_fpe call.

2000-09-07  Jesper Skov  <jskov@redhat.com>

	* tests/signal2.c: Fix compiler warning. Also reset FPU exception
	vectors. Check for SH7708, not EDK7708 in test3 skip code.
	* tests/signal1.c: Fix compiler warning.

2000-05-16  Jesper Skov  <jskov@redhat.com>

        * tests/signal2.c: Also reset DIV_BY_ZERO vector.
