@@ -1,3 +1,11 @@
+2009-01-28  Bart Veer  <bartv@ecoscentric.com>
+
+	* tests/signal1.c: skip the abort() test if there is no proper
+	implementation.
+	
+	* tests/signal1.c, tests/signal2.c: allow to run if
+	CYGPKG_LIBC_STARTUP is absent.
+
 2008-12-24  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* include/signal.inl: (cyg_libc_signals_[un]lock): remove the
